--- a/service.yml
+++ b/service.yml
@@ -2,12 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: bms-service
+  namespace: yash-dev-namespace
   labels:
     app: bms
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
-  - port: 80
-    targetPort: 3000  # Replace with the port your app runs on
+    - port: 80
+      targetPort: 3000
+      nodePort: 30080
   selector:
     app: bms
